--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-Welcome To Devops Training!
-
-We are conducting the session By Tomorrow onwords.
-
-Wiating for the registrations....!
+<Html>    
+<Head>  
+<title>  
+Example of center and BR tag  
+</title>  
+</Head>  
+<Body>   
+<!-- In this example we use the center tag which specify the content at centre of the webpage.-->    
+<center>  
+Welcome to Devops Training..! <br> <!-- The BR tag is used to break a line. -->  
+AWS,Azure and GCP Live and Practical Sessions <br>  
+</center>  
+AWS Devops Will teach you along with Tearraform and Python <!-- Here BR tag is not used, so the next statement is in continuous with one space after this statement. -->   
+Shell Scripting and Linux Administration as well. <br>  
+</Body>  
+</Html>  
