--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@ Example of center and BR tag
 <!-- In this example we use the center tag which specify the content at centre of the webpage.-->    
 <center>  
 Welcome to Devops Training..! <br> <!-- The BR tag is used to break a line. -->  
-AWS,Azure and GCP Live and Practical Sessions <br>  
-</center>  
+AWS,Azure and GCP Live and Practical Sessions <br> 
+
 AWS Devops Will teach you along with Tearraform and Python <!-- Here BR tag is not used, so the next statement is in continuous with one space after this statement. -->   
-Shell Scripting and Linux Administration as well. <br>  
+Shell Scripting and Linux Administration as well 
+</center>  
+. <br>  
 </Body>  
 </Html>  
